Version ClaSS-1.0.8 release (2011/10/10)
-------------------------------------------

Option to BCC email messages to parents with student tutors.

Message explanation line included on the to sender's copy.

Display merit totals for a house on the report_merit page.


Version ClaSS-1.0.7 release (2011/10/06)
-------------------------------------------

Allow get_photo functions to use the student's enrolment number.

Added a button to seneeds host page to list all sen students.

Fixed very recent problem with simple search in InfoBook.



Version ClaSS-1.0.6 release (2011/10/05)
-------------------------------------------

The reports are now locked from changes in report_report_list once published.

Correctly handle bounces when using PEAR:Mail.



Version ClaSS-1.0.5 release (2011/10/01)
-------------------------------------------

Updated the InfoBook comments_list to allow for posting of comments to
the eportfolio.

Added a pop-up to list a student's classes and teachers to the student course
element.

The community group page now has a delete option.

Fix to fetchDependents for the very special case of twins.

Added preferredforename to student and email to guardian searches in InfoBook.

Filter by category for reporting on comments.

Added a new admin group 's' for special access to restricted Background entries.

Extended the file_display script to handle filetypes other than just pdf.

The eportfolio script now embeds the css in the html file and can
publish to just html (was restricted to only pdf).



Version ClaSS-1.0.4 release (2011/09/19)
-------------------------------------------

Fix to email headers sent through Pear mail, needed the date to be explicity set.

Allowed statement profiles (compound mark types) to be carried forward
to first stage of next course.

Removed the explanation line for SMS and Emails to parents as its not generally helpful.

Fix to listing_community_users when community is blank.
