@@ -193,6 +193,8 @@ $string['code']='Code';
 $string['foreign']='Foreign';
 $string['addcolumn']='Add column';
 $string['personalnumber']='Personal number';
+$string['othernumber']='Passport No.';
+$string['anothernumber']='Locker No.';
 $string['from']='From';
 $string['to']='To';
 $string['subject']='';
